NIFI-528: add timeout option to ExecuteStreamCommand
(cherry picked from commit 2266d6719ff5f991e4b8ae055f374e426ec8a510)